--- a/ClassDemo/Website/Site.master
+++ b/ClassDemo/Website/Site.master
@@ -46,15 +46,16 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" runat="server" href="~/">Application name</a>
+                    <a class="navbar-brand" runat="server" href="~/">Chinook Samples</a>
                 </div>
                 <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">
+                   <%-- <ul class="nav navbar-nav">
                         <li><a runat="server" href="~/">Home</a></li>
                         <li><a runat="server" href="~/About">About</a></li>
                         <li><a runat="server" href="~/Contact">Contact</a></li>
                         <li><a runat="server" href="~/SamplePages/NavigationPropertySample">NavQuery</a></li>
-                    </ul>
+                        <li><a runat="server" href="~/SamplePages/SimpleParameterQuery">Parameter Query</a></li>
+                    </ul>--%>
                     <asp:LoginView runat="server" ViewStateMode="Disabled">
                         <AnonymousTemplate>
                             <ul class="nav navbar-nav navbar-right">
@@ -71,6 +72,33 @@
                             </ul>
                         </LoggedInTemplate>
                     </asp:LoginView>
+
+                    <!--it seems to have a properly aligned and working DDM
+                        the menu must be moved till after the LoginView menu items-->
+                    <asp:Menu ID="navMenu" runat="server"
+                        BackColor="#000000" BorderColor="Red"
+                        StaticMenuItemStyle-ForeColor="#999999"
+                         StaticMenuItemStyle-VerticalPadding="10px"
+                         StaticMenuItemStyle-HorizontalPadding="10px"
+                         RenderingMode="List" Orientation="Horizontal"
+                         DynamicMenuItemStyle-ForeColor="#999999"
+                         DynamicMenuStyle-BackColor="Black">
+                        <Items>
+                            <asp:MenuItem Text="Home" NavigateUrl="~/"></asp:MenuItem>
+
+                            <asp:MenuItem Text="Queries" Value="Queries">
+                                <asp:MenuItem Text="Nav Query" 
+                                    NavigateUrl="~/SamplePages/NavigationPropertySample.aspx"></asp:MenuItem>
+                                <asp:MenuItem Text="Parameter Query"
+                                     NavigateUrl="~/SamplePages/SimpleParameterQuery.aspx">
+                                </asp:MenuItem>
+                            </asp:MenuItem>
+
+                            <asp:MenuItem Text="About" NavigateUrl="~/About.aspx"></asp:MenuItem>
+                            <asp:MenuItem Text="Contact" NavigateUrl="~/Contact.aspx"></asp:MenuItem>
+                        </Items>
+                    </asp:Menu>
+
                 </div>
             </div>
         </div>
