--- a/ClassDemo/Website/Site.master
+++ b/ClassDemo/Website/Site.master
@@ -92,6 +92,9 @@
                                 <asp:MenuItem Text="Parameter Query"
                                      NavigateUrl="~/SamplePages/SimpleParameterQuery.aspx">
                                 </asp:MenuItem>
+                                 <asp:MenuItem Text="Nested Repeaters"
+                                     NavigateUrl="~/SamplePages/RepeaterNestedRepeater.aspx">
+                                </asp:MenuItem>
                             </asp:MenuItem>
 
                             <asp:MenuItem Text="About" NavigateUrl="~/About.aspx"></asp:MenuItem>
