Demo Bootstrap Tab control

--- a/ClassDemo/Website/Site.master
+++ b/ClassDemo/Website/Site.master
@@ -95,6 +95,9 @@
                                  <asp:MenuItem Text="Nested Repeaters"
                                      NavigateUrl="~/SamplePages/RepeaterNestedRepeater.aspx">
                                 </asp:MenuItem>
+                                <asp:MenuItem Text="BootStrap Tabs"
+                                     NavigateUrl="~/SamplePages/BootStrapTabs.aspx">
+                                </asp:MenuItem>
                             </asp:MenuItem>
 
                             <asp:MenuItem Text="About" NavigateUrl="~/About.aspx"></asp:MenuItem>
