create CRUD example

--- a/ClassDemo/Website/Site.master
+++ b/ClassDemo/Website/Site.master
@@ -98,6 +98,9 @@
                                 <asp:MenuItem Text="BootStrap Tabs"
                                      NavigateUrl="~/SamplePages/BootStrapTabs.aspx">
                                 </asp:MenuItem>
+                                <asp:MenuItem Text="CRUD Review"
+                                     NavigateUrl="~/SamplePages/CRUDReview.aspx">
+                                </asp:MenuItem>
                             </asp:MenuItem>
 
                             <asp:MenuItem Text="About" NavigateUrl="~/About.aspx"></asp:MenuItem>
