add menu item to access security admin page

--- a/ClassDemo/Website/Site.master
+++ b/ClassDemo/Website/Site.master
@@ -103,7 +103,9 @@
                                <asp:MenuItem Text="CRUD Review"
                                      NavigateUrl="~/SamplePages/CRUDReview.aspx">
                                 </asp:MenuItem>
-
+                                <asp:MenuItem Text="Security Admin"
+                                     NavigateUrl="~/Admin/Security/UserRoleAdmin.aspx">
+                                </asp:MenuItem>
                             </asp:MenuItem>
 
                             <asp:MenuItem Text="About" NavigateUrl="~/About.aspx"></asp:MenuItem>
