create queries for Manage PlayList

--- a/ClassDemo/Website/Site.master
+++ b/ClassDemo/Website/Site.master
@@ -106,6 +106,9 @@
                                 <asp:MenuItem Text="Security Admin"
                                      NavigateUrl="~/Admin/Security/UserRoleAdmin.aspx">
                                 </asp:MenuItem>
+                                 <asp:MenuItem Text="Manage PlayList"
+                                     NavigateUrl="~/SamplePages/ManagePlayList.aspx">
+                                </asp:MenuItem>
                             </asp:MenuItem>
 
                             <asp:MenuItem Text="About" NavigateUrl="~/About.aspx"></asp:MenuItem>
